--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ import { SITE_TITLE } from "../config";
 				</p>
 			</div>
 			<div class="mb-5">
-				Have a look at:
+				Have a glance at:
 				<ul>
 					<li class="!my-0"><a href="/blog">My blog</a></li>
 					<li class="!my-0"><a href="/projects">Some projects and useful tools</a></li>
