--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE } from "../config";
 					class="font-bold text-text-heading text-4xl md:text-5xl pt-4 pb-2 overflow-hidden"
 				>
 					<span
-						class="bg-gradient-to-bl bg-no-repeat bg-bottom bg-[length:90%_40%] from-primary-blue to-primary-blue dark:from-primary-blue dark:to-primary-blue"
+						class="bg-gradient-to-bl bg-no-repeat bg-bottom bg-[length:90%_40%] from-primary-blue to-primary-black dark:from-primary-blue dark:to-primary-blue"
 					>
 						@q1zhen
 					</span>
@@ -81,9 +81,10 @@ import { SITE_TITLE } from "../config";
 				<img class="inline-block" src="https://img.shields.io/badge/C-A8B9CC?logo=c&style=for-the-badge&logoColor=000000" alt="C"/>
 				<img class="inline-block" src="https://img.shields.io/badge/Node.js-5FA04E?logo=nodedotjs&style=for-the-badge&logoColor=ffffff" alt="Node.js"/>
 				<img class="inline-block" src="https://img.shields.io/badge/Vue.js-4FC08D?logo=vuedotjs&style=for-the-badge&logoColor=ffffff" alt="Vue.js"/>
-				<img class="inline-block" src="https://img.shields.io/badge/Nuxt.js-00DC82?logo=nuxtdotjs&style=for-the-badge&logoColor=ffffff" alt="Nuxt.js"/>
+				<img class="inline-block" src="https://img.shields.io/badge/Nuxt.js-00DC82?logo=nuxt&style=for-the-badge&logoColor=ffffff" alt="Nuxt.js"/>
 				<img class="inline-block" src="https://img.shields.io/badge/Electron-47848F?logo=electron&style=for-the-badge&logoColor=ffffff" alt="Electron"/>
 				<img class="inline-block" src="https://img.shields.io/badge/NumPy-013243?logo=numpy&style=for-the-badge&logoColor=ffffff" alt="NumPy"/>
+				<img class="inline-block" src="https://img.shields.io/badge/PyTorch-EE4C2C?logo=pytorch&style=for-the-badge&logoColor=ffffff" alt="PyTorch"/>
 				<img class="inline-block" src="https://img.shields.io/badge/LaTeX-008080?logo=latex&style=for-the-badge" alt="LaTeX"/>
 				<img class="inline-block" src="https://img.shields.io/badge/Git-F05032?logo=git&style=for-the-badge&logoColor=ffffff" alt="Git"/>
 				<img class="inline-block" src="https://img.shields.io/badge/AutoHotkey-334455?logo=autohotkey&style=for-the-badge" alt="AutoHotkey"/>
