--- a/src/layouts/GoogleFont.astro
+++ b/src/layouts/GoogleFont.astro
@@ -72,5 +72,13 @@
         /* Chrome 26+, Opera 23+, Firefox 39+ */
           url("/fonts/space-grotesk-v13-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
     }
+	@font-face {
+		font-family: "Geist";
+		src: url("/fonts/Geist[wght].woff2") format("woff2");
+	}
+	@font-face {
+		font-family: "Geist Mono";
+		src: url("/fonts/GeistMono[wght].woff2") format("woff2");
+	}
   </style>
 </Fragment>
