--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -37,14 +37,14 @@ const sortedPosts = posts
 							<div class="grid grid-cols-[1fr] md:grid-cols-[1fr_auto] md:gap-2 items-start">
 								<div class="title font-bold">
 									{post.frontmatter.external ? (
-										<a href={post.frontmatter.url} target="_blank" class="unset transition-[background-size] duration-300 bg-gradient-to-r bg-left-bottom bg-no-repeat bg-[length:0%_55%] hover:bg-[length:100%_55%] dark:bg-[length:0%_2px] hover:dark:bg-[length:100%_2px] from-primary-blue to-primary-blue dark:from-primary-blue dark:to-primary-blue">
+										<a href={post.frontmatter.url} target="_blank" class="unset transition-[background-size] duration-300 bg-gradient-to-r bg-left-bottom bg-no-repeat bg-[length:0%_55%] hover:bg-[length:100%_55%] from-slate-300 to-slate-300 dark:from-slate-600 dark:to-slate-600">
 											<span>{post.frontmatter.title}</span>
 											<span>
 												<i class="ml-1 mr-1 text-[12px] pb-2 fa-solid fa-up-right-from-square" />
 											</span>
 										</a>
 									) : (
-										<a href={`/blog/${post.slug}`} class="unset transition-[background-size] duration-300 bg-gradient-to-r bg-left-bottom bg-no-repeat bg-[length:0%_55%] hover:bg-[length:100%_55%] dark:bg-[length:0%_2px] hover:dark:bg-[length:100%_2px] from-primary-blue to-primary-blue dark:from-primary-blue dark:to-primary-blue">
+										<a href={`/blog/${post.slug}`} class="unset transition-[background-size] duration-300 bg-gradient-to-r bg-left-bottom bg-no-repeat bg-[length:0%_55%] hover:bg-[length:100%_55%] from-slate-300 to-slate-300 dark:from-slate-600 dark:to-slate-600">
 											{post.frontmatter.title}
 										</a>
 									)}
