--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -36,7 +36,7 @@ const sortedProjects = projects
 						<li class="mb-3">
 							<div class="grid grid-cols-[1fr] md:grid-cols-[1fr_auto] md:gap-2 items-start">
 								<div class="title font-bold">
-									<a href={project.frontmatter.url} target="_blank" class="unset transition-[background-size] duration-300 bg-gradient-to-r bg-left-bottom bg-no-repeat bg-[length:0%_55%] hover:bg-[length:100%_55%] dark:bg-[length:0%_2px] hover:dark:bg-[length:100%_2px] from-primary-blue to-primary-blue dark:from-primary-blue dark:to-primary-blue ">
+									<a href={project.frontmatter.url} target="_blank" class="unset transition-[background-size] duration-300 bg-gradient-to-r bg-left-bottom bg-no-repeat bg-[length:0%_55%] hover:bg-[length:100%_55%] from-slate-300 to-slate-300 dark:from-slate-600 dark:to-slate-600">
 										<span>{project.frontmatter.title}</span>
 										<span>
 											<i class="ml-1 mr-1 text-[12px] pb-2 fa-solid fa-up-right-from-square" />
