--- a/src/styles/preset.css
+++ b/src/styles/preset.css
@@ -27,7 +27,7 @@ html {
 	tab-size: 4;
 	font-size: max(1.6vh, 14px);
 	color: var(--color-text);
-	min-height: 100vh;
+	min-height: 100dvh;
 }
 
 body {
@@ -35,7 +35,7 @@ body {
 }
 
 #main {
-	min-height: 100vh;
+	min-height: 100dvh;
 	width: 100%;
 	margin: auto;
 	display: flex;
