--- a/src/styles/preset.css
+++ b/src/styles/preset.css
@@ -54,7 +54,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: var(--ff-title);
 	text-transform: uppercase;
 	font-weight: bold;
-	line-height: 1;
+	line-height: 1.8;
 	margin: 0.5em 0 0.5em;
 }
 
@@ -89,6 +89,12 @@ pre {
 
 small {
 	font-size: 80%
+}
+
+img {
+	object-fit: contain;
+	width: 100%;
+	height: 100%;
 }
 
 a {
