--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -187,3 +187,51 @@ h1 {
 		content: " <";
 	}
 }
+
+#about-container {
+	font-family: var(--ff-design);
+	line-height: 1;
+	font-size: 1rem;
+	hyphens: auto;
+	#about-grid {
+		display: grid;
+		grid-template-columns: min(30%, 15rem) 1fr;
+		align-self: stretch;
+		gap: 1rem;
+		margin-bottom: 3rem;
+		#bubble {
+			background-color: #000000;
+			color: #ffffff;
+			aspect-ratio: 1;
+			overflow: hidden;
+			display: flex;
+			justify-content: center;
+			flex-direction: column;
+			align-items: center;
+			font-size: 2rem;
+			.fade {
+				opacity: 0.5;
+			}
+		}
+		#about-intro {
+			grid-row: 1;
+			grid-column: 2;
+			text-align: right;
+			display: flex;
+			flex-direction: column;
+			justify-content: end;
+		}
+	}
+	.larger {
+		font-size: 2rem;
+		margin: 0.5rem 0;
+	}
+	.large {
+		font-size: 1.2rem;
+		margin: 0.5rem 0;
+	}
+	.small {
+		font-size: 0.8rem;
+		margin: 0.5rem 0;
+	}
+}
