--- a/src/layouts/LayoutBase.astro
+++ b/src/layouts/LayoutBase.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import { ClientRouter } from "astro:transitions";
 ---
 
 <!doctype html>
@@ -13,6 +14,7 @@ import "../styles/global.css";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<slot name="meta" />
+		<ClientRouter />
 	</head>
 	<body>
 		<div id="main">
