--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,3 +1,3 @@
-<div class="ring ring-secondary-dimmer hover:ring-primary hover:bg-transparent rounded-md bg-secondary-dim/25 p-4 transition-all ease-out duration-300 hover:shadow-xl">
+<div class="ring ring-secondary-dimmer hover:ring-primary hover:bg-transparent rounded-md bg-secondary-dim/25 p-4 transition-all ease-out duration-300 hover:shadow-xl my-2">
 	<slot/>
 </div>
