--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ const nav = [
 ---
 
 <div class="flex flex-row xl:flex-col xl:gap-8 items-center xl:items-end justify-between">
-	<h2 class="hover:text-primary transition-all">q1zhen</h2>
+	<h2 class="hover:text-white transition-all duration-300">q1zhen</h2>
 	<nav class="text-lg flex flex-row xl:flex-col gap-4 xl:gap-2">
 		{nav.map((item) => (
 			<a
@@ -19,9 +19,9 @@ const nav = [
 							? Astro.url.pathname.startsWith(item.href)
 							: Astro.url.pathname == "/"
 					)
-						? "text-primary font-bold"
+						? "text-primary"
 						: "text-secondary-dimmer",
-					"hover:text-primary transition-all ease-out duration-300 xl:block border-none"
+					"hover:text-primary transition-all ease-out duration-300 xl:block border-none font-sans font-bold"
 				]}
 			>
 				{item.title}
