--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -8,17 +8,17 @@ import Footer from "../components/Footer.astro";
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Yang Chyi Jen</title>
+		<title>Yang Qizhen</title>
 	</head>
 	<body>
 		<div class="flex flex-col w-full xl:flex-row xl:justify-center items-center xl:items-start gap-4 xl:gap-8 p-4">
-			<header class="w-full md:w-2xl xl:w-sm text-center xl:[text-align-last:right]">
+			<header class="xl:sticky xl:top-4 w-full md:w-3xl xl:w-sm text-center xl:[text-align-last:right]">
 				<Header />
 			</header>
-			<main class="w-full md:w-2xl xl:flex-none">
+			<main class="w-full md:w-3xl">
 				<slot />
 			</main>
-			<footer class="w-full md:w-2xl xl:w-sm">
+			<footer class="xl:sticky xl:top-4 w-full md:w-3xl xl:w-sm">
 				<Footer />
 			</footer>
 		</div>
