--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import "tailwindcss";
 
 @theme {
-	--font-sans: "Archivo", "Noto Sans", system-ui, sans-serif;
-	--font-serif: "Libre Baskerville", "Noto Serif", "Georgia", serif;
+	--font-sans: "Figtree", "Noto Sans", ui-sans-serif, system-ui, sans-serif;
+	--font-slab: "Zilla Slab", var(--font-serif-fallback);
+	--font-serif: "Libre Baskerville", var(--font-serif-fallback);
+	--font-serif-fallback: "Noto Serif", "Georgia", serif;
+	--font-mono: "JetBrains Mono", "SF Mono", ui-monospace, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 	--color-primary: #D6BD98;
-	--color-primary-dimmer: hsl(36, 43%, 36%);
 	--color-secondary: hsl(180, 40%, 8%);
 	--color-secondary-dim: #40534C;
 	--color-secondary-dimmer: #677D6A;
@@ -13,16 +15,20 @@
 
 @layer base {
 	html {
-		@apply font-serif bg-secondary text-gray-200 hyphens-auto text-justify;
+		@apply font-sans bg-secondary text-stone-200 hyphens-auto;
+	}
+	dfn {
+		all: unset;
+		@apply border-dotted border-0 border-b-2 cursor-help;
 	}
 	h1, h2, h3, h4, h5, h6 {
 		@apply font-sans font-black text-primary mb-2;
 	}
 	h1 { @apply text-6xl; }
-	h2 { @apply text-4xl; }
+	h2 { @apply text-3xl; }
 	h3 { @apply text-xl; }
-	p {
-		@apply mb-6;
+	p:not(:last-child) {
+		@apply mb-3;
 	}
 	b, strong {
 		@apply text-white;
@@ -31,9 +37,9 @@
 		@apply bg-primary text-secondary;
 	}
 	a {
-		@apply border-b border-secondary-dimmer transition-colors duration-300 ease-out;
+		@apply border-b border-secondary-dimmer transition-colors duration-300 ease-out font-slab;
 	}
 	a:hover {
-		@apply text-primary border-primary-dimmer;
+		@apply text-primary border-stone-500;
 	}
 }
