--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,10 +1,13 @@
 <div class:list={[
 	"ring ring-secondary-dimmer rounded-md bg-secondary-dim/25 p-4 my-2 transition-all ease-out duration-300",
 	...[
-		"ring-primary",
-		"bg-transparent",
-		"shadow-xl"
-	].flatMap(item => (["active", "hover"].map(pseudo => (`${pseudo}:${item}`))))
+		"hover:ring-primary",
+		"hover:bg-transparent",
+		"hover:shadow-xl",
+		"active:ring-primary",
+		"active:bg-transparent",
+		"active:shadow-xl",
+	]
 ]}>
 	<slot/>
 </div>
