--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const reservedKeys = ["description", "begin", "end", "time", "url", "abstract"]
 		<b>PUBLIC KEY</b>
 		(<code>3992 5D88 A147 656C 8EAA 5261 B782 D7F5 7541 8B17</code>)
 	</summary>
-	<pre class="border border-secondary-dim overflow-x-auto p-2 w-fit rounded-md my-2">{ publicKey }</pre>
+	<pre class="border border-secondary-dim overflow-x-auto p-2 w-fit max-w-full rounded-md my-2">{ publicKey }</pre>
 </details>
 
 <section class="mb-8">
@@ -35,13 +35,13 @@ const reservedKeys = ["description", "begin", "end", "time", "url", "abstract"]
 		<h2>{category.id}</h2>
 		{category.data ? Object.entries(category.data).map(([name, info]: [string, any]) => (
 			<Card>
-				<div class="font-sans font-bold text-stone-400">{
+				<div class="font-sans text-sm font-bold text-stone-300">{
 					info?.time ? info?.time :
 						(!info?.begin
 							? "For a long time"
 							: `${info?.begin} – ${info?.end ? info?.end : "Present"}`)
 				}</div>
-				<h3 class="mb-0 text-stone-200">{name}</h3>
+				<h3 class="mb-0 text-white">{name}</h3>
 				{info?.url &&
 					<div class="text-sm mb-1"><a href={info?.url} target="_blank">{info?.url}</a></div>
 				}
