--- a/src/pages/blog/post/[slug].astro
+++ b/src/pages/blog/post/[slug].astro
@@ -15,7 +15,7 @@ const { entry } = Astro.props;
 ---
 
 
-<Base>
+<Base title={entry.data.title} description={entry.data.description}>
 	<div class="mt-2">
 		<a href="/blog">« Back to all web logs</a>
 	</div>
