--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -18,7 +18,7 @@ const years = Object.keys(postsByYear)
 const categories = [...new Set(blog.map((post) => post.data.category))]
 ---
 
-<Base>
+<Base title="Blog" description="Here is where I create, break, and write about things.">
 	<h1>My We<span class="text-white">b Log</span>s</h1>
 	<p class="mt-8">Here is where I create, break, and write about things.</p>
 	<p class="mb-12">
