--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDMincho&family=Figtree:ital,wght@0,300..900;1,300..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
 @import "tailwindcss";
 
 @theme {
-	--font-sans: "Figtree", "Noto Sans", ui-sans-serif, system-ui, sans-serif;
-	--font-serif: "Newsreader", "Noto Serif", "Georgia", serif;
+	--font-sans: "Figtree", "Noto Sans", "BIZ UDMincho", ui-sans-serif, system-ui, sans-serif;
+	--font-serif: "Newsreader", "Noto Serif", "Georgia", "BIZ UDMincho", "Noto Serif TC", "Noto Serif CJK TC", ui-serif, serif;
 	--font-mono: "JetBrains Mono", "SF Mono", ui-monospace, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 	--color-primary: #D6BD98;
 	--color-secondary: #0c1d1d;
@@ -50,7 +50,7 @@
 		@apply border border-secondary-dim p-2 rounded-md mt-2 mb-4 w-full box-border  overflow-x-auto text-sm !bg-transparent;
 	}
 	code:not(pre code) {
-		@apply border border-secondary-dim px-0.5 rounded-sm;
+		@apply text-emerald-100 px-0.5;
 	}
 	time {
 		@apply tabular-nums;
