--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=BIZ+UDMincho&family=Figtree:ital,wght@0,300..900;1,300..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chiron+Sung+HK:ital,wght@0,200..900;1,200..900&family=Figtree:ital,wght@0,300..900;1,300..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
 @import "tailwindcss";
 
 @theme {
-	--font-sans: "Figtree", "Noto Sans", "BIZ UDMincho", ui-sans-serif, system-ui, sans-serif;
-	--font-serif: "Newsreader", "Noto Serif", "Georgia", "BIZ UDMincho", "Noto Serif TC", "Noto Serif CJK TC", ui-serif, serif;
+	--font-sans: "Figtree", "Noto Sans", "Chiron Sung HK", ui-sans-serif, system-ui, sans-serif;
+	--font-serif: "Newsreader", "Noto Serif", "Georgia", "Chiron Sung HK", "Noto Serif CJK HK", "Noto Serif HK", ui-serif, serif;
 	--font-mono: "JetBrains Mono", "SF Mono", ui-monospace, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 	--color-primary: #D6BD98;
 	--color-secondary: #0c1d1d;
