--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -36,6 +36,7 @@ const canonicalURL = Astro.url.href;
 		<meta property="twitter:title" content={pageTitle} />
 		<meta property="twitter:description" content={description} />
 
+		<base target="_blank">
 		<ClientRouter />
 	</head>
 	<body>
