--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,6 +6,6 @@ import Base from "../layouts/Base.astro"
 	<h1>404</h1>
 	<h2>PAGE NOT FOUND</h2>
 	<p>It is a lot easier to be lost than found.</p>
-	<a href="/">» Go back to home «</a>
+	<a href="/" target="_self">» Go back to home «</a>
 </Base>
 
