--- a/src/pages/blog/category/[slug].astro
+++ b/src/pages/blog/category/[slug].astro
@@ -26,7 +26,7 @@ const { category, posts } = Astro.props;
 
 <Base title={"Blog Category: " + category.toUpperCase()} description="Here is where I create, break, and write about things.">
 	<div class="mt-2">
-		<a href="/blog">« Back to all web logs</a>
+		<a href="/blog" target="_self">« Back to all web logs</a>
 	</div>
 	<h1 class="mt-4 mb-16">
 		Category: <br/>
