--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,14 +11,14 @@ const lastModified = execSync(`git log -1 --pretty="format:%cI"`);
 
 <div>
 	<p>
-		This site is open-source on <a href="https://github.com/q1zhen/homepage" target="_blank">GitHub</a>.<br/>
+		This site is open-source on <a href="https://github.com/q1zhen/homepage">GitHub</a>.<br/>
 		Last modified at <time datetime={lastModified}>{dayjs(lastModified).format("D MMMM YYYY")}</time>.
 	</p>
 	<nav class="mb-8 text-stone-300">
 		{contacts.map((item) => (
 			<div>
 				<span class="font-black">{item.platform}</span>
-				<a href={item.url} target="_blank">{item.name}</a>
+				<a href={item.url}>{item.name}</a>
 			</div>
 		))}
 	</nav>
