--- a/src/pages/blog/post/[slug].astro
+++ b/src/pages/blog/post/[slug].astro
@@ -17,13 +17,13 @@ const { entry } = Astro.props;
 
 <Base title={entry.data.title} description={entry.data.description}>
 	<div class="mt-2">
-		<a href="/blog">« Back to all web logs</a>
+		<a href="/blog" target="_self">« Back to all web logs</a>
 	</div>
 	<h1 class="mt-4">{entry.data.title}</h1>
 	<div class="mb-8 text-stone-400">
 		<time>{dayjs(entry.data.date).format("D MMMM YYYY")}</time>
 		&CenterDot;
-		<a class="uppercase" href={"/blog/category/" + entry.data.category}>{entry.data.category}</a>
+		<a class="uppercase" href={"/blog/category/" + entry.data.category} target="_self">{entry.data.category}</a>
 		&CenterDot;
 		<span>{entry.data.description}</span>
 	</div>
