--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ function selectedNav(url) {
 
 <div class="flex flex-row xl:flex-col xl:gap-8 items-center xl:items-end justify-between">
 	<h2 class="text-white max-w-40 mb-0 xl:mb-6">q1zhen</h2>
-	<nav class="text-lg flex flex-row flex-wrap ml-8 justify-between xl:ml-0 xl:flex-col gap-x-4 xl:gap-3">
+	<nav class="text-lg flex flex-row flex-wrap ml-8 justify-between xl:ml-0 xl:flex-col gap-x-4 xl:gap-3 uppercase">
 		{nav.map((item) => (
 			<a
 				href={item.href}
