--- a/src/pages/blog/post/[slug].astro
+++ b/src/pages/blog/post/[slug].astro
@@ -12,10 +12,15 @@ export async function getStaticPaths() {
 }
 
 const { entry } = Astro.props;
+const language_map = {
+	en: { code: "en", name: "English" },
+	sh: { code: "zh", name: "Shanghainese" },
+	zh: { code: "zh", name: "Mandarin Chinese" },
+}
 ---
 
 
-<Base title={entry.data.title} description={entry.data.description}>
+<Base title={entry.data.title} description={entry.data.description} lang={language_map[entry.data.lang]?.code}>
 	<div class="mt-2">
 		<a href="/blog" target="_self">« Back to all web logs</a>
 	</div>
@@ -26,6 +31,12 @@ const { entry } = Astro.props;
 		<a class="uppercase" href={"/blog/category/" + entry.data.category} target="_self">{entry.data.category}</a>
 		&CenterDot;
 		<span>{entry.data.description}</span>
+		<br/>
+		{entry.data.lang != "en" &&
+			<>
+				This is an article written in {language_map[entry.data.lang].name}. Common translation programs may not process it properly.
+			</>
+		}
 	</div>
 	<article set:html={entry.rendered.html} />
 </Base>
