--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ const reservedKeys = ["description", "begin", "end", "time", "url", "abstract"]
 	<section class="not-last:mb-6">
 		<h2>{category.id}</h2>
 		{category.data ? Object.entries(category.data).map(([name, info]: [string, any]) => (
-			<Card class="flex flex-col gap-2">
+			<Card class="flex flex-col gap-2 font-serif">
 				<div>
 					<div class="font-sans text-sm font-bold text-stone-400">{
 						info?.time ? info?.time :
@@ -60,7 +60,7 @@ const reservedKeys = ["description", "begin", "end", "time", "url", "abstract"]
 						<div class="text-sm"><a href={info?.url}>{info?.url}</a></div>
 					}
 				</div>
-				{info?.description && <div set:html={marked.parseInline(info?.description)} class="emp font-sans" />}
+				{info?.description && <div set:html={marked.parseInline(info?.description)} class="emp" />}
 				{(info && Object.entries(info).filter(i => !reservedKeys.includes(i[0])).length != 0) &&
 					<div>
 						{info && Object.entries(info).filter(i => !reservedKeys.includes(i[0]))
@@ -77,7 +77,7 @@ const reservedKeys = ["description", "begin", "end", "time", "url", "abstract"]
 							))
 						}
 						{info?.abstract &&
-							<details><summary class="cursor-pointer"><b>Abstract</b></summary><div class="pl-[2em] text-sm font-serif text-justify" set:html={marked.parseInline(info?.abstract)} /></details>
+							<details><summary class="cursor-pointer font-sans"><b>Abstract</b></summary><div class="pl-[2em] text-sm font-serif text-justify" set:html={marked.parseInline(info?.abstract)} /></details>
 						}
 					</div>
 				}
